<resources>
    <string name="app_name">TruckPad-Case</string>
    <string name="endereco_origem">Endereço de origem</string>
    <string name="endereco_destino">Endereço de destino</string>
    <string name="quantidade_eixos">Quantidade de eixos</string>
    <string name="consumo_medio_km_por_l">Consumo médio (Km/L)</string>
    <string name="preco_litro_do_diesel">Preço do litro do diesel (R$)</string>
    <string name="calcular_custos">Calcular custos</string>
    <string name="home_fragment">Dados para pesquisa</string>
    <string name="result_fragment">Resultado</string>
    <string name="duracao">Duração (Horas)</string>
    <string name="distancia">Distância (Km)</string>
    <string name="pedagio">Pedágio (R$)</string>
    <string name="combustivel_necessario">Combustível necessário (Litros)</string>
    <string name="total_de_combusivel">Total de combusível (R$)</string>
    <string name="total">Total (R$)</string>
    <string name="consumo_medio_valor_padrao">7.5</string>
    <string name="preco_litro_do_diesel_valor_padrao">3.73</string>
    <string name="busca_endereco">Busca de endereço</string>
    <string name="antt_perigosa">Perigosa (R$) + padágio</string>
    <string name="antt_frigorificada">Frigorificada (R$) + padágio</string>
    <string name="antt_neogranel">Neogranel (R$) + padágio</string>
    <string name="antt_granel">Granel (R$) + padágio</string>
    <string name="antt_geral">Geral (R$) + padágio</string>
    <string name="tabela_frete_precos_minimos_antt">Tabela Frete - Preços Mínimos - ANTT</string>
</resources>
